<resources>
    <string name="app_name">Banco-LuFaGa</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="introduce_el_usuario">Introduce el usuario</string>
    <string name="introduce_la_contrasenya">Introduce la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="posicion_global">Posicion Global</string>
    <string name="movimientos">Movimientos</string>
    <string name="transferencias">Transferencias</string>
    <string name="cambiar_contrasenya">Cambiar Contraseña</string>
    <string name="promociones">Promociones</string>
    <string name="cajeros">Cajeros</string>
    <string name="bienvenida_banco">Bienvenida/o a mi banco</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="contrasenya_actual">Contraseña actual</string>
    <string name="contrasenya_nueva">Contraseña Nueva</string>
    <string name="repite_la_contrasenya">Repite la Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="elige_tu_cuenta">Elige tu cuenta:</string>
    <string name="cuenta_propia">Cuenta Propia</string>
    <string name="cuenta_ajena">Cuenta Ajena</string>
    <string name="cantidad">Cantidad:</string>
    <string name="escribe_el_num">Escribe el núm. cuenta ajena</string>
    <string name="enviar_justificante">Enviar justificante</string>
    <string name="enviar">Enviar</string>
    <string name="cuentas">Cuentas:</string>
    <string name="selecciona_la_cuenta">Selecciona la cuenta:</string>
    <string name="ultimos_movimientos">Ultimos movimientos:</string>
    <string name="mi_banco">Mi banco</string>
    <string name="contact_mibanco_com">contact@mibanco.com</string>
    <string name="home">Home</string>
    <string name="configuracion">Configuracion</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <string name="todos">Todos</string>
    <string name="tipo_0">Tipo 0</string>
    <string name="tipo_1">Tipo 1</string>
    <string name="tipo_2">Tipo 2</string>
    <string-array name="divisa">
        <item>$</item>
        <item>€</item>
        <item>¥</item>
        <item>£</item>
        <item>₩</item>
    </string-array>
    <string name="musica_desc_off">No escuchar música mientras se ejecuta la aplicación</string>
    <string name="musica_desc_on">Escuchar música mientras se ejecuta la aplicación</string>
    <string name="video_desc_off">No reproducir un video al iniciar la aplicación</string>
    <string name="musica">Música</string>
    <string name="video_desc_on">Reproducir un video al iniciar la aplicación</string>
    <string name="video">Video de Bienvenida</string>
    <string name="multimedia">Multimedia</string>
    <string name="idioma">Idioma</string>
    <string name="idioma_titulo">Idioma de la aplicación</string>
    <string name="idioma_pref">Indica que idioma quieres</string>
    <string name="datos">Datos</string>
    <string name="datos_title">Origen de los datos</string>
    <string name="datos_pref">Indica el origen de los datos</string>
    <string name="data">Datos locales</string>
    <string name="atm">CAJERO</string>
    <string name="atm_list">LISTA DE CAJEROS</string>
    <string name="atm_add">AÑADIR CAJERO</string>
    <string name="atm_maps">MAPAS CAJEROS</string>
    <string name="select_atm">Selecciona Cajero:</string>
    <string name="management_atm">Gestion Cajeros</string>
    <string name="address">Direccion</string>
    <string name="latitude">Latitud</string>
    <string name="guardar">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="update">Actualizar</string>
</resources>