<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/multimedia"
        app:icon="@drawable/ic_music">

        <SwitchPreferenceCompat
            app:key="reproducirMusica"
            app:summaryOff="@string/musica_desc_off"
            app:summaryOn="@string/musica_desc_on"
            app:title="@string/musica" />

        <SwitchPreferenceCompat
            app:key="videoBienvenida"
            app:summaryOff="@string/video_desc_off"
            app:summaryOn="@string/video_desc_on"
            app:title="@string/video" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/idioma"
        app:icon="@drawable/ic_world">

        <ListPreference
            app:key="idioma"
            app:title="@string/idioma_titulo"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/idioma_pref"
            app:entries="@array/idioma"
            app:entryValues="@array/idioma_values" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/datos"
        app:icon="@drawable/ic_cloud">

        <ListPreference
            app:key="datos"
            app:title="@string/datos_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/data"
            app:dialogTitle="@string/datos_pref"
            app:entries="@array/datos"
            app:entryValues="@array/datos_values" />
    </PreferenceCategory>

</PreferenceScreen>
