<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_bienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingStart="6dp"
                android:paddingTop="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="6dp"
                android:src="@drawable/perfil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:text="@string/bienvenido"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagen"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/cardview_bienvenido"
            app:layout_constraintStart_toStartOf="@+id/cardview_bienvenido"
            app:layout_constraintTop_toBottomOf="@+id/cardview_bienvenido">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnPosicion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_wifi"
                    android:drawableTint="@color/white"
                    android:text="@string/posicion_global" />

                <Button
                    android:id="@+id/btnMovimientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_movimiento"
                    android:drawableTint="@color/white"
                    android:text="@string/movimientos" />

                <Button
                    android:id="@+id/btnTransferencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_trans"
                    android:drawableTint="@color/white"
                    android:text="@string/transferencias" />

                <Button
                    android:id="@+id/btnCambContr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_edit"
                    android:drawableTint="@color/white"
                    android:text="@string/cambiar_contrasenya" />

                <Button
                    android:id="@+id/btnPromo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_dinero"
                    android:drawableTint="@color/white"
                    android:text="@string/promociones" />

                <Button
                    android:id="@+id/btnCajero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_map"
                    android:drawableTint="@color/white"
                    android:text="@string/cajeros" />

                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_salir"
                    android:drawableTint="@color/white"
                    android:text="@string/salir" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/navigationBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:navigationIcon="@drawable/ic_menu"
            app:navigationIconTint="@android:color/white">

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bank"
            app:layout_anchor="@id/navigationBar">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="@color/white"
        app:headerLayout="@layout/menu_header"
        app:itemIconTint="@color/green"
        app:itemTextColor="@color/green"
        app:menu="@menu/menu_main" />

</androidx.drawerlayout.widget.DrawerLayout>